# tag_safe

./: .gitignore  Cargo.toml  LICENCE  README.md
Design/: Requirements.md
src/: check.rs  database.rs  lib.rs  prescan.rs
tests/: compiletest.rs
tests/compile-fail/: associated_functions.rs  example-uncommented.rs  extern.rs  multiple_tags.rs  unsafe_propagate.rs  wrong_path.rs
tests/run-pass/: example.rs
