[package]
name = "tag_safe"
description = "A rustc lint plugin to allow tagging of methods with arbitary safety flags"
version = "0.2.12"
authors = ["John Hodge <mutabah@mutabah.net>"]
repository = "http://github.com/thepowersgang/tag_safe/"
keywords = ["plugin", "lint"]
license = "MIT"

[lib]
name = "tag_safe"
path = "src/lib.rs"
plugin = true

[dependencies]
lazy_static = "0.2.2"
log = "0.3"

[dev-dependencies]
compiletest_rs = "0.3"
